# cpp_markov_bot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: config.yaml
src/: hello.cpp  main.cpp
